--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,10 @@ extra:
 markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+
 
 extra_javascript:
   - javascripts/mathjax.js
