update some infomations

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,7 +55,7 @@ extra:
   social:
     - icon: fontawesome/solid/house-chimney
       name: 西电浪潮俱乐部官网
-      link: http://www.xdu-inspur.club/
+      link: http://www.xdu-inspur.cn/
     - icon: fontawesome/brands/github
       name: XDU-ISC
       link: https://github.com/ISC-XDU
